--- a/README
+++ b/README
@@ -4,3 +4,20 @@ An .csv editor that works in terminal. More features like sum, difference, avera
 
 To compile navigate to folder and enter 'make all' and then an executable called 'prog' will appear. Then follow instructions
 in terminal.
+
+** Example output from 'open' command. .csv used here is in /csv_files/ **
+
+|-------------------------------------------|
+|     pelle|       per|       ake|   william|
+|-------------------------------------------|
+|         1|         3|         3|         5|
+|         4|         5|         6|         3|
+|         6|         3|         3|         1|
+|         3|         5|         7|         4|
+|         2|          |         3|         4|
+|         3|         3|         3|         2|
+|          |          |          |         5|
+|         3|         2|         1|         7|
+|          |         8|         6|        54|
+|        67|        43|        24|        65|
+|-------------------------------------------|
